# Saltbase

./: .gitignore  README.md  pyproject.toml  saltbase.py
src/: database.py  saltbase.py
src/saltbase/web-interface/templates/: home.html
web-interface/: website.py
web-interface/static/: style.css
