[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saltbase"
version = "0.0.1"
authors = [
  { name="ZoutigeWolf", email="guuskamphuis@gmail.com" },
]
description = "Prototype database system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZoutigeWolf/saltbase"
"Bug Tracker" = "https://github.com/ZoutigeWolf/saltbase/issues"